--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,7 @@
-spring.data.mongodb.uri=mongodb+srv://telRanUser:322223@cluster0-6ymyq.mongodb.net/micro?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://testUser:12345@cluster0-88xu8.mongodb.net/proPetsProject?retryWrites=true&w=majority
 management.endpoint.shutdown.enabled=true
 management.endpoints.web.exposure.include=*
+  #sessionTime=1200000000
+  sessionTime=180000
+  secret=secret_key
+  #secret.value=2357P
